app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

body {
  color: rgb(var(--foreground-rgb));
  @media (prefers-color-scheme: light) {
    background: linear-gradient(45deg, rgba(0,0,0,1) 35%, rgba(28,28,28,1) 75%, rgba(43,43,43,1) 125%);
  }
  background: #FAF9F6;
  background-repeat: no-repeat;
  background-size: cover;
  @apply min-h-screen;
}

.container-sm {
    @apply max-w-[800px]
        mx-auto
        px-8;
}

.container-xs {
    @apply max-w-[600px]
        mx-auto
        px-8;
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

.slick-slider {
  position: relative;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}
.slick-list {
  position: relative;
  display: block !important;
  padding: 100px !important;
  width: 100%;
}
.slick-track {
  position: relative;
  top: 0;
  left: 0;
  display: flex;
}
.slick-slide div {
  display: flex !important;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.slick-slide .image {
  object-fit: cover;
  border-radius: 2px;
  min-width: 200px !important;
  width: 100%;
}
.slick-slide div div span {
  margin-top: 10px;
  width: inherit;
  text-align: center;
  font-size: 0.75rem;
  font-family: Arial, Helvetica, sans-serif;
  font-weight: 600;
  text-transform: uppercase;
  color: #111;
}
@media screen and (max-width: 580px) {
  .slick-slide div div span {
    display: none;
  }
  .slick-slide.slick-current div div span {
    display: block;
    margin-top: 10px;
    width: inherit;
    text-align: center;
    font-size: 0.7rem;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: 600;
    text-transform: uppercase;
    color: #111;
  }
}
.slick-slide:not(.slick-active) {
  position: relative;
  z-index: 997;
  filter: blur(4px);
  transform: scale(1.5);
}
.slick-slide.slick-active:not(.slick-current) {
  position: relative;
  z-index: 998;
  transform: scale(2);
  transition: 0.25s;
  filter: blur(1px);
}
.slick-slide.slick-active.slick-current {
  position: relative;
  z-index: 999;
  transform: scale(2.5);
  transition: 0.25s;
}
@media only screen and (max-width: 768px) {
  .slick-slide.slick-active.slick-current {
    transform: scale(2.25);
  }
}
.slick-slide.slick-active:not(.slick-current) .image,
.slick-slide.slick-active.slick-current .image,
.slick-slide:not(.slick-active) .image {
  width: 100% !important;
}
.slick-prev,
.slick-next {
  display: none !important;
}
.custom-prevArrow,
.custom-nextArrow {
  position: relative;
  z-index: 99999;
  top: -10px;
}
.custom-prevArrow {
  left: -10px;
}
.custom-nextArrow {
  right: -10px;
}
.custom-prevArrow:hover,
.custom-nextArrow:hover {
  fill: red;
  cursor: pointer;
}

